[project]
name = "ldap-jwt-auth"
description = "Python microservice providing user authentication against LDAP server and returning a JSON Web Token."
readme = "README.md"
requires-python = ">=3.13"
version = "2.0.0"

dependencies = [
    "cachetools",
    "cryptography",
    "fastapi[all]",
    "PyJWT",
    "python-ldap",
    "requests",
    "uvicorn"
]

[project.urls]
"Repository" = "https://github.com/ral-facilities/ldap-jwt-auth"

[project.optional-dependencies]
code-analysis = [
    "black==25.1.0",
    "pylint==3.3.7",
    "ldap-jwt-auth[test]"
]

test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-env==1.1.5"
]

dev = [
    "ldap-jwt-auth[code-analysis]",
    "ldap-jwt-auth[test]"
]

[tool.setuptools]
packages = ["ldap_jwt_auth"]

[tool.coverage.run]
omit = [
    # Exclude test code from coverage measurement
    "test/*",
    # Exclude routers from coverage measurement as they are not unit tested
    "ldap_jwt_auth/routers/*"
]
