[project]
name = "ldap-jwt-auth"
description = "Python microservice providing user authentication against LDAP server and returning a JSON Web Token."
readme = "README.md"
requires-python = ">=3.13"
version = "3.1.2"

dependencies = [
    "cachetools>=7.1.1",
    "cryptography>=48.0.0",
    "fastapi[all]>=0.136.1",
    "PyJWT>=2.12.1",
    "python-ldap>=3.4.5",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]

[project.urls]
Repository = "https://github.com/ral-facilities/ldap-jwt-auth"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.sources]
ldap-jwt-auth = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[dependency-groups]
code-analysis = [{ include-group = "test" }, "black>=26.3.1", "pylint>=4.0.5"]

test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

dev = [
    { include-group = "code-analysis" },
    { include-group = "test" },
]

[tool.coverage.run]
omit = [
    # Exclude test code from coverage measurement
    "test/*",
    # Exclude routers from coverage measurement as they are not unit tested
    "ldap_jwt_auth/routers/*",
]
